fix: fixed some merge case